@@ -11,6 +11,8 @@ import com.byteowls.jopencage.model.JOpenCageForwardRequest;
 import com.byteowls.jopencage.model.JOpenCageLatLng;
 import com.byteowls.jopencage.model.JOpenCageResponse;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.core.env.Environment;
 import org.springframework.data.annotation.Id;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.*;
@@ -21,6 +23,7 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.util.List;
 import java.util.Properties;
+import java.util.stream.Collectors;
 
 @RestController
 public class UserController {
@@ -28,26 +31,25 @@ public class UserController {
     @Autowired
     private final InDBUserRepository inDBUserRepository;
 
-    private Properties appProps;
+    @Value("${open_cages.token}")
+    private String token;
+
 
     public UserController(InDBUserRepository inDBUserRepository) {
         this.inDBUserRepository = inDBUserRepository;
-
-        String rootPath = getClass().getClassLoader().getResource("").getPath();
-        String appConfigPath = rootPath + "application.properties";
-
-        appProps = new Properties();
-        try {
-            appProps.load(new FileInputStream(appConfigPath));
-        } catch (IOException e) {
-            e.printStackTrace();
-        }
     }
 
     @GetMapping(value = "/users")
     public List<UserDTO> getUsers() {
-        List<UserDTO> userDTOList = inDBUserRepository.getAll().stream().map(user -> new UserDTO(user.getEmailAddress().toString(), user.getLastName(), user.getFirstName(), user.getAddress().toString())).toList();
-        return userDTOList;
+        return inDBUserRepository.getAll().stream()
+                .map(user -> {
+                    UserDTO userDTO = new UserDTO();
+                    userDTO.Address = user.getAddress().toString();
+                    userDTO.email = user.getEmailAddress().toString();
+                    userDTO.firstname = user.getFirstName();
+                    userDTO.lastname = user.getLastName();
+                    return userDTO;
+                }).collect(Collectors.toList());
     }
 
     @GetMapping(value = "/users/{email}")
@@ -58,7 +60,7 @@ public class UserController {
 
     @PostMapping(value = "/users")
     public void addUser(@RequestBody @Valid CreateUserDTO createUserDTO) {
-        JOpenCageGeocoder jOpenCageGeocoder = new JOpenCageGeocoder(appProps.getProperty("open_cages.token"));
+        JOpenCageGeocoder jOpenCageGeocoder = new JOpenCageGeocoder(token);
         JOpenCageForwardRequest request = new JOpenCageForwardRequest(
                 createUserDTO.address.number + " " +
                         createUserDTO.address.street + ", " +
